@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST restview-1.1.2.tar.gz 5846 RMD160 445642fb08a8ee363e4757bc97a77a6cf371696e SHA1 20a4e1773570b7bc8f5c441817c88619fc8d3284 SHA256 bd1b6163e4d615c6ea24849be781c8c485ba90022c09c52c3cf3e85ecb773075
 DIST restview-1.1.3.tar.gz 7181 RMD160 7f6f03faf351feb6271a77a17e7cf9571185bad3 SHA1 6220154d10ff5909ad74fe0b8e91b90e6b7540fc SHA256 de60ba194cd48091c6ab16c9a0f6c375caa5ae3bc2785460d256efced66efde9
-EBUILD restview-1.1.2.ebuild 528 RMD160 d736768d72159ce9e03ff4705910c6d60ec4d77e SHA1 5d06bae51547af699957578a09a1964514665066 SHA256 407eef9efb10f32de0c1f837c71fefda8c73a7f2391ae4e53d51041a1074f3ad
-EBUILD restview-1.1.3.ebuild 529 RMD160 1c9b98d2516801ca2a49859f3af3492455a1be0a SHA1 bfe66cedd6ecf12281c433a5109b4f910c5b701d SHA256 7b63861a7102a0397250858280de4bc457c34f7c71a4203ec56a71fde6e66315
-MISC ChangeLog 1310 RMD160 a5d190c8239d4162c27c589acd63cf38b30460b2 SHA1 eeec7682b1da153cc55d2864d20410688edc7e36 SHA256 63dc9d14cbaf4520588897c7e98c627d5895c867f6509b72c52a3d60bfcc0f14
+EBUILD restview-1.1.3.ebuild 528 RMD160 d736768d72159ce9e03ff4705910c6d60ec4d77e SHA1 5d06bae51547af699957578a09a1964514665066 SHA256 407eef9efb10f32de0c1f837c71fefda8c73a7f2391ae4e53d51041a1074f3ad
+MISC ChangeLog 1422 RMD160 4e6beebe59dfab22b68680a6cc8cfa6f3a2c774a SHA1 b35d5a3e5eec1afdb3f09411c2d2f2cca11fd87d SHA256 7668c6a3117b1404bb8b881287f7f0b571e2db68b1fcf591d5d5a8028193e06d
 MISC metadata.xml 879 RMD160 479742b661fc063d46e1be269108144f774d6565 SHA1 b635add369b87a3e0020aedcc25eb98b581841a1 SHA256 0f0ff7b5996d41ca7326b89adf8eec1e772946208e15d4e1f962942cbae443d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAksbR2gACgkQzJrj3cAXR0nluQCgv6vOB3d3yNJ6ETBGa8Y+9aKB
-Va4An20+l3RbRSO1x62/bFctYn9Zytcd
-=wuWX
+iEYEARECAAYFAksbSfIACgkQzJrj3cAXR0nVcACeN20+em6krUDTWBRLLTocrxvJ
+lfkAnR9G7cPSS3MWcuf11463GMo0AyzO
+=iQ/f
 -----END PGP SIGNATURE-----
