@@ -1,22 +1,0 @@
-dev-python/setuptools >=app-admin/eselect-python-20090804 >=app-shells/bash-3.2 virtual/python
-dev-python/docutils pygments? ( dev-python/pygments ) virtual/python
-0
-http://pypi.python.org/packages/source/r/restview/restview-1.1.2.tar.gz
-
-http://mg.pov.lt/restview/
-GPL-3
-A viewer for ReStructuredText documents that renders them on the fly
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-pygments
-
-
-
-2
-
-compile install postinst postrm prepare unpack
-
-
-
-
-
