@@ -1,4 +1,3 @@
-REM 2009-12-06 +1 MSG Stabilise x86 dev-python/restview-1.1.3 %a
 REM 2009-12-06 +1 MSG Stabilise x86 x11-wm/matwm2-0.0.85 %a
 REM 2009-12-07 +1 MSG Stabilise amd64 dev-python/should_dsl-1.2.1 %a
 REM 2009-12-07 +1 MSG Stabilise x86 dev-python/should_dsl-1.2.1 %a
