@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Dec 2009; James Rowe <jnrowe@gmail.com> -restview-1.1.2.ebuild,
+  restview-1.1.3.ebuild:
+  Keyworded x86.
+
   06 Dec 2009; James Rowe <jnrowe@gmail.com> restview-1.1.3.ebuild:
   Keyworded amd64.
 
